# CellularAutomata

./: .gitignore  Cargo.toml  README.md
src/: gol.rs  gol_gui.rs  gol_term.rs  main.rs  smoothlife_gui.rs  smoothlife_term.rs
src/cautomata/: board.rs  gol.rs  mod.rs
src/static/: smoothlife.fs
