[package]
name = "golrs"
authors = ["Iurii Kondrakov <deezzir@gmail.com>"]
version = "1.0.0"
description = "Interactive Game of Life in terminal"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
clap = "4.1.1"