[package]
name = "golrs"
authors = ["Iurii Kondrakov <deezzir@gmail.com>"]
version = "1.0.0"
description = "Interactive Game of Life in terminal"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.1"
rand = "0.8.5"
sdl2 = "0.35.2"
